[package]
name = "nft_ingester"
version = "0.7.2"
edition = "2021"
publish = false

[dependencies]
serde_derive = "1.0.190"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.31"
serde_json = "1.0.81"
tokio = { version = "1.37.0", features = ["full", "tracing", "sync"] }
sqlx = { version = "0.6.2", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "offline", "json"] }
chrono = "0.4.19"
serde = "1.0.136"
bs58 = "0.4.0"
reqwest = "0.11.11"
plerkle_messenger = { version = "1.5.2", features = ['redis'] }
plerkle_serialization = { version = "1.8.0" }
flatbuffers = "23.1.21"
mpl-bubblegum = {version = "1.2.0", features = ["serde"] }
spl-account-compression = "0.3.0"
num-traits = "0.2.15"
blockbuster = { path = "../blockbuster" }
figment = { version = "0.10.6", features = ["env", "toml", "yaml"] }
solana-sdk = "~1.17"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
solana-transaction-status = "~1.17"
solana-storage-bigtable = "~1.17"
solana-bigtable-connection = "1.10.31"
stretto = { version = "0.8.4", features = ["async"] }
# is not used directly in this crate but stretto needs it and it's better to use exactly 2.3.1
async-channel = "2.3.1"
tokio-util = { version = "0.7.10", features = ["codec", "compat"] }
tracing-subscriber = { version = "0.3.16", features = [
    "json",
    "env-filter",
    "ansi",
] }
clap = { version = "4.2.2", features = ["derive", "cargo"] }
bincode = "1.3.3"
metrics-utils = { path = "../metrics_utils" }
rocks-db = { path = "../rocks-db" }
postgre-client = { path = "../postgre-client" }
digital_asset_types = { path = "../digital_asset_types", features = ["json_types", "sql_types"] }
open-rpc-schema = { version = "0.0.4" }
schemars = "0.8.6"
jsonrpc-core = {version = "19.0.0", git = "https://github.com/RequescoS/jsonrpc-response-middleware.git"}
jsonrpc-http-server = {version = "19.0.0", git = "https://github.com/RequescoS/jsonrpc-response-middleware.git"}
libc = "0.2.144"
mockall = "0.11.4"
entities = { path = "../entities" }
usecase = { path = "../usecase" }
grpc = { path = "../grpc" }
mpl-token-metadata = { version = "4.1.1"}
async-trait = "0.1.74"
futures = "0.3.29"
interface = { path = "../interface" }
tonic = "0.10.2"
tracing = "0.1.40"
backfill-rpc = { path = "../backfill_rpc" }
prometheus-client = "0.21.2"
pprof = { version = "0.13.0", features = ["_protobuf", "protobuf-codec"] }
solana-program = "~1.17"
itertools = "0.12.1"
solana-client = "~1.17"
heck = "0.5.0"
"lazy_static" = "1.4.0"
tempfile = "3.8.1"
anchor-lang = "0.29.0"
spl-concurrent-merkle-tree = "0.2.0"
uuid = { version = "1.6.1" }
multer = "3.0.0"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
hex = "0.4.3"
jemallocator = { version = "*", features = ["profiling", "debug"] }
arweave-rs = {version = "0.2.0", git = "https://github.com/RequescoS/arweave-rs.git", rev = "d8f5ef76f06c96afdf013fe5b62301790631b33f"}
triomphe = "=0.1.9"

[dev-dependencies]
setup = { path = "../tests/setup" }
testcontainers = "0.15.0"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
criterion = "0.5.1"
zip-extract = "0.1.2"
csv = "1.3.0"
rand = "0.8.5"

[[bench]]
name = "integrated_benchmark"
harness = false

[[bench]]
name = "ingester_benchmark"
harness = false

[[bench]]
name = "synchronizer_benchmark"
harness = false

[features]
rpc_tests = []
integration_tests = []
rollup_tests = []
profiling = []

[dependencies.utils]
version = "0.1.8"
git = "https://github.com/extrnode/solana-geyser-zmq"

[[bin]]
name = "ingester"

[[bin]]
name = "migrator"

[[bin]]
name = "raw_backfiller"

[[bin]]
name = "synchronizer"

[[bin]]
name = "raw_backup"
