[package]
name = "nft_ingester"
version = "0.7.2"
edition = "2021"
publish = false

[dependencies]
serde_derive = { workspace = true }
env_logger = "0.10.0"
thiserror = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
bs58 = "0.4.0"
reqwest = { workspace = true }
plerkle_messenger = { version = "1.5.2", features = ['redis'] }
plerkle_serialization = { git = "https://github.com/n00m4d/digital-asset-validator-plugin.git" }
flatbuffers = { workspace = true }
mpl-bubblegum = { workspace = true }
spl-account-compression = { workspace = true }
num-traits = "0.2.15"
blockbuster = { git = "https://github.com/adm-metaex/blockbuster", branch = "feat/create-tree-with-root" }
figment = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
solana-transaction-status = { workspace = true }
solana-storage-bigtable = "~1.18.11"
solana-bigtable-connection = "1.10.31"
stretto = { version = "0.8.4", features = ["async"] }
# is not used directly in this crate but stretto needs it and it's better to use exactly 2.3.1
async-channel = "2.3.1"
tokio-util = { version = "0.7.10", features = ["codec", "compat"] }
tracing-subscriber = { version = "0.3.16", features = [
    "json",
    "env-filter",
    "ansi",
] }
clap = { workspace = true }
bincode = "1.3.3"
metrics-utils = { path = "../metrics_utils" }
rocks-db = { path = "../rocks-db" }
postgre-client = { path = "../postgre-client" }
open-rpc-schema = { version = "0.0.4" }
schemars = "0.8.6"
jsonrpc-core = {version = "19.0.0", git = "https://github.com/RequescoS/jsonrpc-response-middleware.git"}
jsonrpc-http-server = {version = "19.0.0", git = "https://github.com/RequescoS/jsonrpc-response-middleware.git"}
libc = "0.2.144"
mockall = { workspace = true }
entities = { path = "../entities" }
usecase = { path = "../usecase" }
grpc = { path = "../grpc" }
mpl-token-metadata = { version = "4.1.1"}
async-trait = { workspace = true }
futures = { workspace = true }
interface = { path = "../interface" }
tonic = "0.10.2"
tracing = { workspace = true }
backfill-rpc = { path = "../backfill_rpc" }
prometheus-client = "0.21.2"
pprof = { version = "0.13.0", features = ["_protobuf", "protobuf-codec"] }
solana-program = { workspace = true }
itertools = "0.12.1"
solana-client = { workspace = true }
heck = "0.5.0"
"lazy_static" = "1.4.0"
tempfile = "3.8.1"
anchor-lang = { workspace = true }
spl-concurrent-merkle-tree = { workspace = true }
uuid = { version = "1.6.1" }
multer = "3.0.0"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
hex = "0.4.3"
jemallocator = { version = "*", features = ["profiling", "debug"] }
arweave-rs = {version = "0.2.0", git = "https://github.com/RequescoS/arweave-rs.git", rev = "d8f5ef76f06c96afdf013fe5b62301790631b33f"}
serde_cbor = { workspace = true }
triomphe = "=0.1.9"
bubblegum-batch-sdk = { workspace = true }
jsonpath_lib = "0.3.0"
mime_guess = "2.0.4"
url = "2.3.1"

[dev-dependencies]
setup = { path = "../tests/setup" }
testcontainers = "0.15.0"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
criterion = "0.5.1"
zip-extract = "0.1.2"
csv = "1.3.0"
rand = { workspace = true }

[[bench]]
name = "integrated_benchmark"
harness = false

[[bench]]
name = "ingester_benchmark"
harness = false

[[bench]]
name = "synchronizer_benchmark"
harness = false

[features]
rpc_tests = []
integration_tests = []
batch_mint_tests = []
profiling = []

[dependencies.utils]
version = "0.1.8"
git = "https://github.com/extrnode/solana-geyser-zmq"

[[bin]]
name = "ingester"

[[bin]]
name = "migrator"

[[bin]]
name = "raw_backfiller"

[[bin]]
name = "synchronizer"

[[bin]]
name = "raw_backup"

[[bin]]
name = "core_indexing"