[package]
name = "nft_ingester"
version = "0.7.2"
edition = "2021"
publish = false

[dependencies]
serde_derive = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
bs58 = { workspace = true }
reqwest = { workspace = true }
plerkle_messenger = { workspace = true }
plerkle_serialization = { workspace = true }
flatbuffers = { workspace = true }
mpl-bubblegum = { workspace = true }
spl-account-compression = { workspace = true }
num-traits = { workspace = true }
blockbuster = { workspace = true }
figment = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
solana-transaction-status = { workspace = true }
solana-storage-bigtable = { workspace = true }
solana-bigtable-connection = { workspace = true }
stretto = { workspace = true }
# is not used directly in this crate but stretto needs it and it's better to use exactly 2.3.1
async-channel = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
bincode = { workspace = true }
metrics-utils = { path = "../metrics_utils" }
rocks-db = { path = "../rocks-db" }
postgre-client = { path = "../postgre-client" }
open-rpc-schema = { workspace = true }
schemars = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-http-server = { workspace = true }
libc = { workspace = true }
mockall = { workspace = true }
entities = { path = "../entities" }
usecase = { path = "../usecase" }
grpc = { path = "../grpc" }
mpl-token-metadata = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
interface = { path = "../interface" }
tonic = { workspace = true }
tracing = { workspace = true }
backfill-rpc = { path = "../backfill_rpc" }
prometheus-client = { workspace = true }
pprof = { workspace = true }
solana-program = { workspace = true }
itertools = { workspace = true }
solana-client = { workspace = true }
heck = { workspace = true }
lazy_static = { workspace = true }
tempfile = { workspace = true }
anchor-lang = { workspace = true }
spl-concurrent-merkle-tree = { workspace = true }
uuid = { workspace = true }
multer = { workspace = true }
xxhash-rust = { workspace = true }
hex = { workspace = true }
jemallocator = { workspace = true }
arweave-rs = { workspace = true }
serde_cbor = { workspace = true }
triomphe = { workspace = true }
bubblegum-batch-sdk = { workspace = true }
jsonpath_lib = { workspace = true }
mime_guess = { workspace = true }
url = { workspace = true }

[dev-dependencies]
setup = { path = "../tests/setup" }
testcontainers = { workspace = true }
tracing-test = { workspace = true }
criterion = { workspace = true }
zip-extract = { workspace = true }
csv = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "integrated_benchmark"
harness = false

[[bench]]
name = "ingester_benchmark"
harness = false

[[bench]]
name = "synchronizer_benchmark"
harness = false

[features]
rpc_tests = []
integration_tests = []
batch_mint_tests = []
profiling = []

[dependencies.utils]
version = "0.1.8"
git = "https://github.com/extrnode/solana-geyser-zmq"

[[bin]]
name = "ingester"

[[bin]]
name = "migrator"

[[bin]]
name = "raw_backfiller"

[[bin]]
name = "synchronizer"

[[bin]]
name = "raw_backup"

[[bin]]
name = "core_indexing"