[package]
name = "postgre-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
mockall = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
entities = { path = "../entities" }
solana-sdk = { workspace = true }
tracing  = { workspace = true }
metrics-utils = { path = "../metrics_utils" }
chrono = { workspace = true }
usecase = { path = "../usecase" }
thiserror = { workspace = true }
interface = { path = "../interface" }

[dev-dependencies]
setup = { path = "../tests/setup" }
testcontainers = "0.15.0"
uuid = { version = "1.6.1", features = ["v4"] }
rand = { workspace = true }
once_cell = "1.19.0"
lazy_static = "1.4.0"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }

[features]
integration_tests = []