[package]
name = "postgre-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
mockall = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
entities = { path = "../entities" }
solana-sdk = { workspace = true }
tracing  = { workspace = true }
metrics-utils = { path = "../metrics_utils" }
chrono = { workspace = true }
usecase = { path = "../usecase" }
thiserror = { workspace = true }
interface = { path = "../interface" }
uuid = { workspace = true }

[dev-dependencies]
setup = { path = "../tests/setup" }
testcontainers = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
tracing-test = { workspace = true }

[features]
integration_tests = []
