[package]
name = "postgre-client"
version = "0.6.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
mockall = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
entities = { workspace = true }
solana-sdk = { workspace = true }
tracing  = { workspace = true }
metrics-utils = { workspace = true }
chrono = { workspace = true }
usecase = { workspace = true }
thiserror = { workspace = true }
interface = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
setup = { workspace = true }
testcontainers = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
tracing-test = { workspace = true }

[features]
integration_tests = []
