[package]
name = "rocks-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
solana-sdk = { workspace = true }
bincode = "1.3.3"
serde = { workspace = true }
thiserror = { workspace = true }
num_cpus = "1.16.0"
figment = { workspace = true }
lz4 = "1.24.0"
tar = "0.4.40"
reqwest = { workspace = true }
futures-util = "0.3.29"
metrics-utils = { path = "../metrics_utils" }
tokio = { workspace = true }
spl-account-compression = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
mockall = { workspace = true }
async-trait = { workspace = true }
tokio-stream = "0.1.14"
entities = { path = "../entities" }
interface = { path = "../interface" }
solana-transaction-status = { workspace = true }
tracing = { workspace = true }
serde_cbor = { workspace = true }
mpl-token-metadata = { version = "3.2.3"}
rustyline = "13.0.0"
csv = "1.3.0"
hex = "0.4.3"
Inflector = "0.11.4"
base64 = { workspace = true }
usecase = { path = "../usecase" }
tempfile = "3.8.1"
bubblegum-batch-sdk = { git = "https://github.com/metaplex-foundation/bubblegum-batch-sdk.git", rev = "0d529f5" }

[dev-dependencies]
rand = { workspace = true }
setup = { path = "../tests/setup" }
criterion = "0.5.1"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }

[features]
integration_tests = []

[[bench]]
name = "misc_benchmark"
harness = false

[[bench]]
name = "dump_benchmark"
harness = false

[[bin]]
name = "column_remover"

[[bin]]
name = "column_copier"
