[package]
name = "rocks-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { workspace = true }
solana-sdk = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
num_cpus = { workspace = true }
figment = { workspace = true }
lz4 = { workspace = true }
tar = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
metrics-utils = { path = "../metrics_utils" }
tokio = { workspace = true }
spl-account-compression = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
mockall = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
async-channel = { workspace = true }
entities = { path = "../entities" }
interface = { path = "../interface" }
solana-transaction-status = { workspace = true }
tracing = { workspace = true }
serde_cbor = { workspace = true }
mpl-token-metadata = { workspace = true }
rustyline = { workspace = true }
csv = { workspace = true }
hex = { workspace = true }
Inflector = { workspace = true }
base64 = { workspace = true }
usecase = { path = "../usecase" }
tempfile = { workspace = true }
bubblegum-batch-sdk = { git = "https://github.com/metaplex-foundation/bubblegum-batch-sdk.git", rev = "0d529f5" }
num-traits = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
setup = { path = "../tests/setup" }
criterion = { workspace = true }
tracing-test = { workspace = true }

[features]
integration_tests = []

[[bench]]
name = "misc_benchmark"
harness = false

[[bench]]
name = "dump_benchmark"
harness = false

[[bin]]
name = "column_remover"

[[bin]]
name = "column_copier"
