[package]
name = "rocks-db"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
clap = { workspace = true }
rocksdb = { workspace = true }
solana-sdk = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
num_cpus = { workspace = true }
figment = { workspace = true }
lz4 = { workspace = true }
tar = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
metrics-utils = { path = "../metrics_utils" }
tokio = { workspace = true }
spl-account-compression = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
mockall = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
async-channel = { workspace = true }
entities = { path = "../entities" }
interface = { path = "../interface" }
solana-transaction-status = { workspace = true }
tracing = { workspace = true }
serde_cbor = { workspace = true }
mpl-token-metadata = { workspace = true }
rustyline = { workspace = true }
csv = { workspace = true }
hex = { workspace = true }
Inflector = { workspace = true }
base64 = { workspace = true }
usecase = { path = "../usecase" }
tempfile = { workspace = true }
bubblegum-batch-sdk = { workspace = true }
num-traits = { workspace = true }
# using a different version of flatbuffer compared to the rest of the project as this one is compatible with generator used for AssetCompleteDetails structures
flatbuffers = { version="24.3.25", features = ["serialize"]} 
indicatif = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
setup = { path = "../tests/setup" }
criterion = { workspace = true }
tracing-test = { workspace = true }
itertools = { workspace = true }

[features]
integration_tests = []

[[bench]]
name = "misc_benchmark"
harness = false

[[bench]]
name = "dump_benchmark"
harness = false

[[bin]]
name = "column_remover"

[[bin]]
name = "column_copier"

[[bin]]
name = "fork_detector"

[[bin]]
name = "leaf_checker"

[[bin]]
name = "migrate_slots_db"
