[package]
name = "usecase"
version = "0.6.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
entities = { workspace = true }
interface = { workspace = true }
tracing = { workspace = true }
solana-sdk = { workspace = true }
metrics-utils = { workspace = true }
tokio = { workspace = true }
solana-storage-bigtable = { workspace = true }
solana-bigtable-connection = { workspace = true }
solana-transaction-status = { workspace = true }
mpl-bubblegum = { workspace = true }
mockall = { workspace = true }
spl-account-compression = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
spl-concurrent-merkle-tree = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
anchor-lang = { workspace = true }
plerkle_serialization = { workspace = true }
async-recursion = { workspace = true }
thiserror = { workspace = true }
solana-storage-proto = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
