[package]
name = "acc_forwarder"
version = "0.0.1"
edition = "2021"

[dependencies]
redis = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
plerkle_messenger = { workspace = true }
plerkle_serialization = { workspace = true }
flatbuffers = { workspace = true }
clap = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
figment = { workspace = true }
bs58 = { workspace = true }
tokio-stream = { workspace = true }
mpl-token-metadata = { workspace = true }
reqwest = { workspace = true }
