[package]
name = "load_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "~1.18.11"
tokio = { version ="1.25.0", features = ["full"] }
solana-client = "~1.18.11"
mpl-token-metadata = { version = "3.2.3" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
solana-program = "~1.18.11"
spl-associated-token-account = "2.3.0"
rand = "0.8.5"
fake = "2.5.0"
