[package]
name = "setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocks-db = { path = "../../rocks-db" }
entities = { path = "../../entities" }
postgre-client = { path = "../../postgre-client" }
nft_ingester = { path = "../../nft_ingester" }
metrics-utils = { path = "../../metrics_utils" }
solana-sdk = { workspace = true }
tempfile = "3.8.1"
rand = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.2", features = ["postgres"] }
uuid = { version = "1.6.1", features = ["v4"] }
tracing  ="0.1.40"