[package]
name = "setup"
version = "0.6.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocks-db = { workspace = true }
entities = { workspace = true }
postgre-client = { workspace = true }
nft_ingester = { workspace = true }
metrics-utils = { workspace = true }
solana-sdk = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sqlx = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rocksdb = { workspace = true }
flatbuffers = { workspace = true, features = ["serialize"] }
