[package]
name = "setup"
version = "0.6.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocks-db = { path = "../../rocks-db" }
entities = { path = "../../entities" }
postgre-client = { path = "../../postgre-client" }
nft_ingester = { path = "../../nft_ingester" }
metrics-utils = { path = "../../metrics_utils" }
solana-sdk = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sqlx = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rocksdb = { workspace = true }
flatbuffers = { version="24.3.25", features = ["serialize"]}
